Aqui tenemos terminada la funcionalidad de insertar una OS, para que esto funcionara era necesario crear tambien funcionalidades como consultar todas las ordenes de servicio y por filtro, por ultimo, fue necesario crear un servicio para comunicarse con GLPI para acceder a los datos que eran necesarios.

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,7 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all"
+  "printWidth":90,
+  "singleQuote": false,
+  "trailingComma": "none",
+  "quoteProps":"preserve"
 }
+
