--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/node-uci": "^1.3.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "crypto-js": "^4.1.1",
     "mssql": "^7.3.5",
     "nestjs-ldap": "^3.5.1",
     "passport": "^0.6.0",
